Revision history for {{$dist->name}}

{{$NEXT}}
       - Test suite now is fully parallelizable
       - Switch ::ScriptHelpers to Sub::Exporter::Progressive
       - Switch from Test::Exception to Test::Fatal

0.002115  2012-07-10 13:36:35 America/Chicago
       - Make tests use actual temp files to make certain systems stop failing tests
       - Remove dep on File::Touch

0.002114  2012-05-07 08:05:20 America/Chicago
       - Correctly set the version deployed to the version requested on install
         instead of just the current schema version

0.002113  2012-05-05 23:09:33 America/Chicago
       - Remove isa check on schema attributes so that you may pass the schema
         class instead of the schema object

0.002112  2012-04-03 21:11:19 America/Chicago
       - Handle errors in Perl Scripts better
       - Stop supporting FindBin by localizing $0, just use Dir::Self if you
         need that

0.002111  2012-03-29 20:09:45 America/Chicago
       - Improve docs by linking from implementations to their roles

0.002110  2012-03-14 21:22:36 America/Chicago
       - Use ->count instead of ->next to check if version storage is deployed
         (->next caused issues on MSSQL due to length of DDL)
       - Fix a couple stupid documentation issues (Phillip Smith)

0.002100  2012-03-03 17:09:21 CST6CDT
       - Wrap upgrades, downgrades, and installs in a transaction, as a failure
         to add a version to the version table should cause a rollback
       - Allow user to specify version of schema to install
       - Added better sandboxing (stolen straight from Plack::Util) for coderefs
         to avoid accidental leakage
       - Sandboxing also makes $0 and thus FindBin et al work in perl scripts

0.002000  2012-02-28 21:20:48 CST6CDT
       - Added DBIx::Class::DeploymentHandler::DeployMethod::SQL::Translator::ScriptHelpers,
         ALL users who use perl scripts during migrations are encouraged to use
         schema_from_schema_loader from that package.
