@@ -42,3 +42,4 @@ Test::Requires              = 0.06
 Context::Preserve           = 0.01
 File::Temp                  = 0
 Sub::Exporter::Progressive  = 0
+Text::Brew                  = 0.02
